# todo-app-cli-2

./: .context7.json  .gitignore  CLAUDE.md  CONTEXT7_LIBRARIES_LOADED.md  CONTEXT7_QUICK_REFERENCE.md  CONTEXT7_SETUP.md  README.md  package-lock.json  project-detail.md  pyproject.toml
.specify/memory/: constitution.md
backend/: .gitignore  README.md  alembic.ini  pyproject.toml  railway.json  render.yaml
backend/alembic/: env.py
backend/src/: __init__.py  config.py  database.py  main.py
backend/tests/: conftest.py  test_auth_jwt.py  test_auth_password.py  test_models_tag.py  test_models_task.py  test_models_task_tag.py  test_models_user.py  test_routes_auth.py  test_routes_tags.py  test_routes_tasks.py  test_user_isolation.py
frontend/: .gitignore  jest.config.js  package-lock.json  package.json  tailwind.config.ts  vercel.json
frontend/__tests__/: setup.ts
scripts/: run_tests.py
specs/1-cli-todo-app/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/2-fullstack-todo-webapp/: api-issues-auth-fix.md  data-model.md  deployment.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/3-fix-auth-issues/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
src/: __init__.py  main.py  models.py  storage.py  ui.py
src/commands/: __init__.py  add.py  base.py  complete.py  delete.py  list.py  update.py
tests/: __init__.py  conftest.py  test_main.py  test_models.py  test_storage.py
tests/test_commands/: __init__.py  test_add.py  test_complete.py  test_delete.py  test_list.py  test_update.py
(+90 files in other folders)
